--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@
 /Methods/__pycache__/*
 /ObjectPool/__pycache__/*
 /UnitTests/__pycache__/*
+/methods.txt
+/newTest.txt
+/test.txt
+/testRes.txt
+/testResByte.txt
