--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,4 @@
 /Methods/__pycache__/*
 /ObjectPool/__pycache__/*
 /UnitTests/__pycache__/*
-/methods.txt
-/newTest.txt
-/test.txt
-/testRes.txt
-/testResByte.txt
+/*.txt
